force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/PMC_CPQ_IntegrationFieldMap__mdt.object-meta.xml
<CustomObject>
    <description>Store Details for Quote &amp; Quote Line JSON Request Structure</description>
    <label>Integration Field Map</label>
    <pluralLabel>Integration Field Maps</pluralLabel>
</CustomObject>