force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/fields/PMC_CPQ_AttributeKey__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AttributeKey__c</fullName>
    <label>PMC_CPQ_AttributeKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>