force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/fields/PMC_CPQ_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ErrorMessage__c</fullName>
    <description>Error Message displayed when Mandatory field is missed.</description>
    <label>PMC_CPQ_ErrorMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>