force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/fields/PMC_CPQ_IsLookup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMC_CPQ_IsLookup</label>
    <type>Checkbox</type>
</CustomField>