force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/fields/PMC_CPQ_IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to specify if any given field detail is necessary for request generation.</description>
    <inlineHelpText>Specify if the field is mandatory.</inlineHelpText>
    <label>PMC_CPQ_IsMandatory</label>
    <type>Checkbox</type>
</CustomField>