force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/listViews/All_Integration_Field_Maps.listView-meta.xml
<ListView>
    <fullName>All_Integration_Field_Maps</fullName>
    <columns>MasterLabel</columns>
    <columns>PMC_CPQ_ApexAPIName__c</columns>
    <columns>PMC_CPQ_AttributeKey__c</columns>
    <columns>PMC_CPQ_DataType__c</columns>
    <columns>PMC_CPQ_IsLookup__c</columns>
    <columns>PMC_CPQ_SFObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Integration Field Maps</label>
    <language>en_US</language>
</ListView>