force-app/main/default/objects/PMC_CPQ_IntegrationFieldMap__mdt/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>PMC_CPQ_ApexAPIName__c</columns>
    <columns>PMC_CPQ_AttributeKey__c</columns>
    <columns>PMC_CPQ_DataType__c</columns>
    <columns>PMC_CPQ_IsLookup__c</columns>
    <columns>PMC_CPQ_SFObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
    <language>en_US</language>
</ListView>